--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <h2>
 <a id="why-did-you-make-this" class="anchor" href="#why-did-you-make-this" aria-hidden="true"><span class="octicon octicon-link"></span></a>Why did you make this?</h2>
 
-<p>I saw the <em>xprintidle</em> tool that this repository is based on and thought it was a shame that it wasn't yet overengineered in the grand GNU tradition. Also, I felt like learning how to properly organize a GNU autotools project, complete with internationalization support, texinfo documentation, etc. It seemed like a fun and easy learning experience, especially since I could easily work off of GNU Hello as an example (I mean, xprintidle was already pretty much just GNU Hello, except it displays the result of an API call rather than a constant string).</p>
+<p>I saw the <em>xprintidle</em> tool that this repository is based on and thought it was a shame that it wasn't yet overengineered in the grand GNU tradition. Also, I felt like learning how to properly organize a GNU autotools project, complete with internationalization support, texinfo documentation, etc. It seemed like a fun and easy learning experience, especially since I could easily work off of GNU Hello as an example (I mean, <em>xprintidle</em> was already pretty much just GNU Hello, except it displays the result of an API call rather than a constant string).</p>
 
 <hr>
 
